Created the 2.1.1 tags, which is identical to 2.1.0 with org.opengis.coverage.grid.quadrilateral package removed.